make folders for whatsapp bot in dockerfile

--- a/lang/en.json
+++ b/lang/en.json
@@ -216,6 +216,18 @@
       "no": "No"
     }
   },
+  "emoji": {
+    "searchEmojisInEnglish": "Search by emoji name",
+    "SmileysEmotion": "Smileys & Emotion",
+    "PeopleBody": "People & Body",
+    "AnimalsNature": "Animals & Nature",
+    "FoodDrink": "Food & Drink",
+    "TravelPlaces": "Travel & Places",
+    "Activities": "Activities",
+    "Objects": "Objects",
+    "Symbols": "Symbols",
+    "Flags": "Flags"
+  },
   "and": "&",
   "head": "Title",
   "headPlaceholder": "Write your title here",
@@ -246,16 +258,6 @@
   "type": "Advertisement type",
   "individual": "Individual",
   "duo": "Duo",
-  "searchEmojisInEnglish": "Search by emoji name",
-  "SmileysEmotion": "Smileys & Emotion",
-  "PeopleBody": "People & Body",
-  "AnimalsNature": "Animals & Nature",
-  "FoodDrink": "Food & Drink",
-  "TravelPlaces": "Travel & Places",
-  "Activities": "Activities",
-  "Objects": "Objects",
-  "Symbols": "Symbols",
-  "Flags": "Flags",
   "swipeToBrowse": "Swipe to browse",
   "comments": "Comments",
   "leaveYourComment": "Leave your comment",
