--- a/lang/es.json
+++ b/lang/es.json
@@ -217,6 +217,18 @@
       "no": "No"
     }
   },
+  "emoji": {
+    "searchEmojisInEnglish": "Buscar emoji por nombre inglés",
+    "SmileysEmotion": "Emoticonos y Emociones",
+    "PeopleBody": "Personas y Cuerpo",
+    "AnimalsNature": "Animales y Naturaleza",
+    "FoodDrink": "Comida y Bebida",
+    "TravelPlaces": "Viajes y Lugares",
+    "Activities": "Actividades",
+    "Objects": "Objetos",
+    "Symbols": "Simbolos",
+    "Flags": "Banderas"
+  },
   "and": "y",  
   "head": "Título",
   "headPlaceholder": "Escribe tu título aquí",
@@ -247,16 +259,6 @@
   "type": "Tipo de anuncio",
   "individual": "Individual",
   "duo": "Duo",
-  "searchEmojisInEnglish": "Buscar emoji por nombre inglés",
-  "SmileysEmotion": "Emoticonos y Emociones",
-  "PeopleBody": "Personas y Cuerpo",
-  "AnimalsNature": "Animales y Naturaleza",
-  "FoodDrink": "Comida y Bebida",
-  "TravelPlaces": "Viajes y Lugares",
-  "Activities": "Actividades",
-  "Objects": "Objetos",
-  "Symbols": "Simbolos",
-  "Flags": "Banderas",
   "swipeToBrowse": "Deslizar para navegar",
   "comments": "Comentarios",
   "leaveYourComment": "Dejá tu comentario",
