--- a/lang/pt.json
+++ b/lang/pt.json
@@ -216,6 +216,18 @@
       "no": "Não"
     }
   },
+  "emoji": {
+    "searchEmojisInEnglish": "Pesquise emoji pelo nome inglês",
+    "SmileysEmotion": "Sorrisos e Emoções",
+    "PeopleBody": "Pessoas e Corpo",
+    "AnimalsNature": "Animais e Natureza",
+    "FoodDrink": "Comida e Bebida",
+    "TravelPlaces": "Viagens e Lugares",
+    "Activities": "Atividades",
+    "Objects": "Objetos",
+    "Symbols": "Símbolos",
+    "Flags": "Bandeiras"
+  },
   "and": "e",
   "head": "Título",
   "headPlaceholder": "Escreva sua título aqui.",
@@ -247,16 +259,6 @@
   "type": "Tipo de anúncio",
   "individual": "Individual",
   "duo": "Duo",
-  "searchEmojisInEnglish": "Pesquise emoji pelo nome inglês",
-  "SmileysEmotion": "Sorrisos e Emoções",
-  "PeopleBody": "Pessoas e Corpo",
-  "AnimalsNature": "Animais e Natureza",
-  "FoodDrink": "Comida e Bebida",
-  "TravelPlaces": "Viagens e Lugares",
-  "Activities": "Atividades",
-  "Objects": "Objetos",
-  "Symbols": "Símbolos",
-  "Flags": "Bandeiras",
   "swipeToBrowse": "Deslize para navegar",
   "comments": "Comentários",
   "leaveYourComment": "Deixe o seu comentário",
