--- a/lang/en.json
+++ b/lang/en.json
@@ -23,7 +23,7 @@
     "description": "The best escorts in Paraguay and Asunción. High level companions for you. Paraguay Escorts. Py Escorts.",
     "noEscort": "No escort found",
     "levelName": "{level} level",
-    "PYG": "PYG",
+    "currency": "PYG",
     "filter": {
       "byService": "Service",
       "byArea": "Area",
