--- a/lang/pt.json
+++ b/lang/pt.json
@@ -23,7 +23,7 @@
     "description": "Seus melhores acompanhantes e escort no Paraguai e Assunção. Acompanhantes de alto nível para você. Acompanhantes Paraguai. Acompanhantes Py.",
     "noEscort": "Nenhum acompanhante encontrada",
     "levelName": "Nível {level}",
-    "PYG": "PYG",
+    "currency": "PYG",
     "filter": {
       "byService": "Serviço",
       "byArea": "Bairro",
