add admin escort page

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,8 +18,8 @@
     "allRightReserved": "All rights reserved"
   },
   "index": {
-    "title": "Vip escorts in Paraguay",
-    "subtitle": "Paraguay Escorts. Py Escorts.",
+    "subtitle": "Vip escorts in Paraguay",
+    "title": "Paraguay Escorts. Py Escorts.",
     "description": "The best escorts in Paraguay and Asunción. High level companions for you. Paraguay Escorts. Py Escorts.",
     "noEscort": "No escort found",
     "levelName": "{level} level",
