--- a/lang/es.json
+++ b/lang/es.json
@@ -18,8 +18,8 @@
     "allRightReserved": "Todos los derechos reservados"
   },
   "index": {
-    "title": "Las mejores escort en Paraguay",
-    "subtitle": "Escort Paraguay. Escort Py.",
+    "subtitle": "Las mejores escort en Paraguay",
+    "title": "Escort Paraguay. Escort Py.",
     "description": "Acompañantes en Paraguay. Las mejores escorts de Asunción. Chicas de compañía de alto nivel para ti. Escort Paraguay. Escort Py.",
     "noEscort": "No se encontró ninguna escort",
     "levelName": "Nivel {level}",
