add asuncion to subtitle

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,7 +18,7 @@
     "allRightReserved": "All rights reserved"
   },
   "index": {
-    "subtitle": "Vip escorts in Paraguay",
+    "subtitle": "Vip escorts in Asunción and Paraguay",
     "title": "Paraguay Escorts. Py Escorts.",
     "description": "The best escorts in Paraguay and Asunción. High level companions for you. Paraguay Escorts. Py Escorts.",
     "noEscort": "No escort found",
