--- a/lang/pt.json
+++ b/lang/pt.json
@@ -18,7 +18,7 @@
     "allRightReserved": "Todos os direitos reservados"
   },
   "index": {
-    "subtitle": "Acompanhantes no Paraguai",
+    "subtitle": "Acompanhantes no Assunção e Paraguai",
     "title": "Acompanhantes Paraguai. Acompanhantes Py.",
     "description": "Seus melhores acompanhantes e escort no Paraguai e Assunção. Acompanhantes de alto nível para você. Acompanhantes Paraguai. Acompanhantes Py.",
     "noEscort": "Nenhum acompanhante encontrada",
