--- a/lang/es.json
+++ b/lang/es.json
@@ -14,7 +14,7 @@
     "legal": "Legales",
     "news": "Novedades",
     "blog": "Blog",
-    "admin": "Administrador",
+    "admin": "Admin",
     "allRightReserved": "Todos los derechos reservados"
   },
   "index": {
