send whatsapp on publication approved

--- a/lang/es.json
+++ b/lang/es.json
@@ -193,7 +193,8 @@
         "gallery": "Fotos y videos",
         "publish": "Condiciones del servicio"
       },
-      "publicationSavedWaitingApproval": "Su publicación se ha guardado. Se publicará tan pronto como un administrador lo apruebe. Le enviaremos una nueva notificación tan pronto como se apruebe."
+      "savedWaitingApproval": "Su publicación se ha guardado. Se publicará tan pronto como un administrador lo apruebe. Le enviaremos una nueva notificación tan pronto como se apruebe.",
+      "approvedAndPublished": "Su publicación ha sido aprobada y publicada. Estará disponible en 15 minutos en {url}"
     },
     "age": {
       "warning": "Por ley, tenemos que verificar que tienes al menos 18 años para publicar tu anuncio.\n\nSu información y su documento nunca se compartirán con nadie a menos que las autoridades nos lo soliciten.",
