--- a/lang/es.json
+++ b/lang/es.json
@@ -166,7 +166,7 @@
     "sendWhatsapp": "Enviar código por whatsapp",
     "verifyCode": "Comprueba el código enviado a través de whatsapp",
     "magicLinkInstructions": "No se requiere contraseña.\n\nLe enviaremos un código para iniciar sesión por whatsapp.",
-    "messageWithLoginCode": "Su código de acceso es:",
+    "messageWithLoginCode": "Su código de acceso es *{token}*\nNo dudes en escribirnos aquí si necesitas ayuda con tu publicación.",
     "goBack": "Volver",
     "notValidCode": "{value} no es un código valido"
   },
