--- a/lang/es.json
+++ b/lang/es.json
@@ -165,9 +165,9 @@
     "loginCode": "Código",
     "sendWhatsapp": "Enviar código por whatsapp",
     "verifyCode": "Comprueba el código enviado a través de whatsapp",
-    "freePublication": "Su publicación es gratuita hasta finales de 2023",
+    "freePublication": "Publicación gratuita para 2023",
     "daysLeft": "Todavía quedan {days}",
-    "magicLinkInstructions": "No se requiere contraseña.\n\nLe enviaremos un código para iniciar sesión por whatsapp.",
+    "magicLinkInstructions": "Al iniciar sesión, podrás gestionar tu publicación en autonomía\n\nNo se requiere contraseña.\n\nLe enviaremos un código para iniciar sesión por whatsapp.",
     "messageWithLoginCode": "Su código de acceso es *{token}*\nNo dudes en escribirnos aquí si necesitas ayuda con tu publicación.",
     "goBack": "Volver",
     "notValidCode": "{value} no es un código valido"
