fix temporary page on 404

--- a/lang/en.json
+++ b/lang/en.json
@@ -145,6 +145,7 @@
   },
   "error": {
     "pageNotFound": "This page could not be found",
+    "youWillBeRedirected": "You will be redirected to the home page",
     "unauthorized": "Unauthorized",
     "unauthenticated": "Unauthenticated",
     "somethingWentWrong": "Something went wrong",
@@ -297,11 +298,6 @@
   "commentPublished": "Comment saved. It now needs admin approval.",
   "call": "Call",
   "sendWhatsapp": "Send Whatsapp",
-  "pageNotFound": "This page could not be found",
-  "unauthorized": "Unauthorized",
-  "somethingWentWrong": "Something went wrong",
-  "backToTheHomePage": "Back to the home page",
-  "home": "Home page",
   "account": "Account",
   "duration": "Duration",
   "until": "Until",
