--- a/lang/es.json
+++ b/lang/es.json
@@ -145,6 +145,7 @@
   },
   "error": {
     "pageNotFound": "Esta página no se pudo encontrar",
+    "youWillBeRedirected": "Serás redirigido a la página de inicio",
     "unauthorized": "No autorizado",
     "unauthenticated": "No autenticado",
     "somethingWentWrong": "Algo salió mal",
@@ -298,11 +299,6 @@
   "commentPublished": "Comentario guardado. Ahora necesita la aprobación del administrador.",
   "call": "Llamar",
   "sendWhatsapp": "Enviar Whatsapp",
-  "pageNotFound": "Esta página no se pudo encontrar",
-  "unauthorized": "No autorizado",
-  "somethingWentWrong": "Algo salió mal",
-  "backToTheHomePage": "Volver a la página de inicio",
-  "home": "Página de inicio",
   "account": "Cuenta",
   "duration": "Duración",
   "until": "Hasta",
