--- a/lang/pt.json
+++ b/lang/pt.json
@@ -145,6 +145,7 @@
   },
   "error": {
     "pageNotFound": "Página não encontrada",
+    "youWillBeRedirected": "Você será redirecionado para a página inicial",
     "unauthorized": "Não autorizado",
     "unauthenticated": "Não autenticado",
     "somethingWentWrong": "Algo deu errado",
@@ -298,11 +299,6 @@
   "commentPublished": "Comentário salvo. Agora precisa de aprovação do administrador.",
   "call": "Ligar",
   "sendWhatsapp": "Enviar Whatsapp",
-  "pageNotFound": "Esta página não foi encontrada",
-  "unauthorized": "Não autorizado",
-  "somethingWentWrong": "Algo deu errado",
-  "backToTheHomePage": "Voltar a página inicial",
-  "home": "Pagina inicial",
   "account": "Conta",
   "duration": "Duração",
   "until": "Até",
