change index title ans subtitle

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,8 +18,8 @@
     "allRightReserved": "All rights reserved"
   },
   "index": {
-    "subtitle": "Vip escorts in Asunción and Paraguay",
-    "title": "Paraguay Escorts. Py Escorts.",
+    "subtitle": "Vip escorts in PY",
+    "title": "Paraguay Escorts.",
     "description": "The best escorts in Paraguay and Asunción. High level companions for you. Paraguay Escorts. Py Escorts.",
     "noEscort": "No escort found",
     "levelName": "{level} level",
