--- a/lang/pt.json
+++ b/lang/pt.json
@@ -18,8 +18,8 @@
     "allRightReserved": "Todos os direitos reservados"
   },
   "index": {
-    "subtitle": "Acompanhantes no Assunção e Paraguai",
-    "title": "Acompanhantes Paraguai. Acompanhantes Py.",
+    "subtitle": "Acompanhantes no PY",
+    "title": "Acompanhantes Paraguai.",
     "description": "Seus melhores acompanhantes e escort no Paraguai e Assunção. Acompanhantes de alto nível para você. Acompanhantes Paraguai. Acompanhantes Py.",
     "noEscort": "Nenhum acompanhante encontrada",
     "levelName": "Nível {level}",
