change index title ans subtitle

--- a/lang/es.json
+++ b/lang/es.json
@@ -18,7 +18,7 @@
     "allRightReserved": "Todos los derechos reservados"
   },
   "index": {
-    "subtitle": "Las mejores escort en PY",
+    "subtitle": "Las mejores escort PY",
     "title": "Escort Paraguay",
     "description": "Acompañantes en Paraguay. Las mejores escorts de Asunción. Chicas de compañía de alto nivel para ti. Escort Paraguay. Escort Py.",
     "noEscort": "No se encontró ninguna escort",
