add flag to title

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,8 +18,8 @@
     "allRightReserved": "All rights reserved"
   },
   "index": {
+    "title": "Paraguay escorts",
     "subtitle": "Vip escorts in PY",
-    "title": "Paraguay Escorts.",
     "description": "The best escorts in Paraguay and Asunción. High level companions for you. Paraguay Escorts. Py Escorts.",
     "noEscort": "No escort found",
     "levelName": "{level} level",
